<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                                   android:background="@color/colorPrimary">

    <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/tvImc"
            android:layout_width="329dp"
            android:layout_height="130dp"
            android:id="@+id/tvImc" android:fontFamily="@font/rubik_medium"
            android:textSize="30sp" android:textColor="@color/colorAccent" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:lineSpacingExtra="-6sp" android:textStyle="bold"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="354dp"
            android:layout_height="488dp"
            app:layout_constraintTop_toBottomOf="@+id/tvImc" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/linearLayout" android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.478">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageTextInput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColorHint="@color/colorDark"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true" android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:hint="@string/edadTextInput"
                    android:inputType="number"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    app:boxBackgroundColor="@color/colorAccent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pesoTextInput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColorHint="@color/colorDark"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true" android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:hint="@string/pesoTextInput"
                    android:inputType="number"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    app:boxBackgroundColor="@color/colorAccent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alturaInputText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColorHint="@color/colorDark"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true" android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:hint="@string/alturaTextInput"
                    android:inputType="number"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    app:boxBackgroundColor="@color/colorAccent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textColor="@color/colorAccent" android:textStyle="bold"
                android:fontFamily="@font/rubik_medium" android:text="@string/tvGenero"
                android:textSize="15sp" android:textAlignment="textStart"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="138dp">

            <com.mortega.burnfit.util.CheckableGender
                    android:id="@+id/manCheck"
                    android:layout_width="161dp"
                    android:layout_height="114dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:card_text="Masculino"
                    android:layout_marginStart="10dp" android:layout_marginTop="15dp" app:cardCornerRadius="9dp"/>

            <com.mortega.burnfit.util.CheckableGender
                    android:id="@+id/womanCheck"
                    android:layout_width="161dp"
                    android:layout_height="114dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:card_text="Femenino"
                    android:layout_marginStart="10dp" android:layout_marginTop="15dp" app:cardCornerRadius="9dp"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:text="@string/tvFiltro"
                                                     android:fontFamily="@font/rubik_medium"
                                                     android:textColor="@color/colorAccent" android:textStyle="bold"
                                                     android:textSize="15sp" android:layout_marginBottom="14dp"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="34dp"
                      android:orientation="horizontal" android:layout_marginBottom="5dp">

            <com.mortega.burnfit.util.CheckableFilter
                    android:id="@+id/sedentario"
                    android:layout_width="106dp"
                    android:layout_height="29dp" app:cardCornerRadius="12dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:card_filter="@string/sedentario"
                    android:layout_marginStart="10dp"/>

            <com.mortega.burnfit.util.CheckableFilter
                    android:id="@+id/ligeramente_activo"
                    android:layout_width="202dp"
                    android:layout_height="29dp" app:cardCornerRadius="12dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:card_filter="@string/ligeramente_activo"
                    android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="40dp"
                      android:orientation="horizontal">

            <com.mortega.burnfit.util.CheckableFilter
                    android:id="@+id/moderado"
                    android:layout_width="98dp"
                    android:layout_height="29dp" app:cardCornerRadius="12dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:card_filter="@string/moderado"
                    android:layout_marginStart="10dp"/>

            <com.mortega.burnfit.util.CheckableFilter
                    android:id="@+id/muyActivo"
                    android:layout_width="122dp"
                    android:layout_height="29dp" app:cardCornerRadius="12dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:card_filter="@string/muy_activo"
                    android:layout_marginStart="10dp"/>

            <com.mortega.burnfit.util.CheckableFilter
                    android:id="@+id/atleta"
                    android:layout_width="100dp"
                    android:layout_height="29dp" app:cardCornerRadius="12dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:card_filter="@string/atleta"
                    android:layout_marginStart="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/imcButton"
            android:layout_width="357dp"
            android:layout_height="59dp" android:id="@+id/calcularButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:fontFamily="@font/rubik_medium"
            android:textAllCaps="false" android:textSize="18sp" android:background="@drawable/button_gradient"
            android:textColor="@color/colorPrimary" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintVertical_bias="0.0"
            android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>