<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <pl.droidsonroids.gif.GifImageView
            android:id="@+id/logoApp"
            android:layout_width="456dp"
            android:layout_height="379dp"
            android:src="@drawable/border_gradient_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="240dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/tvRegister"
            android:layout_width="242dp"
            android:layout_height="119dp" android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="112dp" app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/rubik_medium" android:textSize="52sp" android:textColor="@color/colorAccent"
            android:lineSpacingExtra="-8dp" android:textAlignment="center" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.496"/>

    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/back_button"
            android:layout_width="150dp"
            android:layout_height="42dp" android:id="@+id/backButton"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="@drawable/border_gradient" android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="false" android:textSize="16sp" android:fontFamily="@font/rubik_medium"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.497"
            android:clickable="true" android:gravity="center" android:focusable="true"/>

    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="370dp"
            android:layout_height="371dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.005">

        <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameText"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColorHint="@color/colorDark"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:hint="@string/nameTextInput"
                        android:inputType="text"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccent"
                        app:boxBackgroundColor="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColorHint="@color/colorDark"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:hint="@string/emailTextInput"
                        android:inputType="textEmailAddress"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccent"
                        app:boxBackgroundColor="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:paddingStart="5dp"
                    android:textColorHint="@color/colorDark"
                    app:boxBackgroundMode="outline"

                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimaryDark" android:paddingEnd="5dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:hint="@string/passwordTextInput"
                        android:inputType="textPassword"
                        android:textColor="@color/colorAccent"
                        app:boxBackgroundColor="@color/colorAccent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/repeatText"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:paddingStart="5dp"
                    android:textColorHint="@color/colorDark"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true" android:paddingEnd="5dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:hint="@string/passwordRepeatInputText"
                        android:inputType="textPassword"
                        android:textColor="@color/colorAccent"
                        app:boxBackgroundColor="@color/colorAccent" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registrarButton"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="371dp"
            android:layout_height="49dp"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/rubik_medium"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/registerNow"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" app:layout_constraintVertical_bias="0.393"
    />

</androidx.constraintlayout.widget.ConstraintLayout>