<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/colorPrimary"
                                                   android:layout_marginTop="8dp">

    <TextView
            android:text="@string/infoTimer"
            android:layout_width="283dp"
            android:layout_height="119dp"
            android:id="@+id/infoTime" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="236dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/timeText" app:layout_constraintVertical_bias="0.463"
            android:textColor="@color/colorAccent" android:textStyle="bold" android:textSize="29sp"
            android:textAlignment="center"/>
    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/circle_chronometer"
            android:layout_width="251dp"
            android:layout_height="210dp"
            android:src="@drawable/circle_chronometer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="48dp"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/anchor_chronometer"
            android:layout_width="311dp"
            android:layout_height="306dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/anchor_chronometer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp" app:layout_constraintTop_toTopOf="parent"/>

    <android.widget.Chronometer android:layout_height="96dp" android:layout_width="209dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                android:id="@+id/timeText"
                                android:textColor="@color/colorAccent" android:textStyle="bold"
                                android:textAlignment="center" android:fontFamily="@font/rubik_medium"
                                android:textSize="56sp"
                                android:layout_marginTop="8dp"
                                app:layout_constraintTop_toBottomOf="@+id/circle_chronometer"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/empezarButton"
            android:layout_width="315dp"
            android:layout_height="57dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/empezarButton"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/colorTextButtonTwo"
            android:background="@drawable/button_training" android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/timeText"
            app:layout_constraintVertical_bias="0.0"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pararButton"
            android:layout_width="315dp"
            android:layout_height="57dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:text="@string/pararButton"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/colorTextButtonOne"
            android:background="@drawable/button_gradient" android:textSize="16sp"
            android:textStyle="bold"
            android:clickable="false" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/empezarButton"/>

    <androidx.appcompat.widget.AppCompatButton android:layout_width="0dp"
                                               android:layout_height="56dp"
                                               app:layout_constraintEnd_toEndOf="parent"
                                               app:layout_constraintStart_toStartOf="parent"
                                               android:text="@string/pasarButton"
                                               android:fontFamily="@font/rubik_medium"
                                               android:textColor="@color/colorAccent"
                                               android:textAlignment="center" android:textAllCaps="true"
                                               android:background="@color/colorPrimary" android:layout_marginTop="120dp"
                                               app:layout_constraintTop_toBottomOf="@+id/pararButton"
                                               android:id="@+id/pasarEjercicio"/>

</androidx.constraintlayout.widget.ConstraintLayout>